Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61882

[REG 5.6->5.7.0]: Emoji don't render when used with non-Latin characters (OSX Regression)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.5, 5.10.1
    • 5.7.0, 5.8.0, 5.9.1, 5.10
    • GUI: Font handling
    • {noformat}
      ProductName: Mac OS X
      ProductVersion: 10.11.6
      BuildVersion: 15G31
      {noformat}
    • macOS
    • 6ca48a847a1805c3826004c5b989b4ae14397a37

    Description

      On OSX, trying to add an emoji alongside input from non-latin character sets results in the emoji rendering as a series of black horizontal bars (see attached)

      This appears to affect most GUI components, including QAbstractItemView, QLineEdit, etc.

      To reproduce:

      Run attached example emojibug.cpp

      OR

      Add non-latin language text (e.g. Ukrainian, Arabic, Chinese, etc.) into a QLineEdit or QListWidget followed by any emoji chararcter (e.g. via the `Show Emoji and Symbols` menu)

      I've confirmed that this works as expected on Windows and in 5.6.2, so this appears to be a regression.

      Attachments

        1. 5.6.png
          5.6.png
          50 kB
        2. 5.7-5.9.png
          5.7-5.9.png
          56 kB
        3. emojibug.cpp
          0.4 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              jeremy Jeremy Cytryn
              Votes:
              6 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes